tests/tests/neg/error_messages/annot_check/invalid_detach_trait_impl01.rs
#![allow(unused)]

#[flux::specs {

    // unresolved impl
    impl From<u32> for busize {
      fn gromp() -> usize[0];
    }
}]
const _: () = ();
